added compression format

--- a/configuration.ini
+++ b/configuration.ini
@@ -94,6 +94,11 @@ serverPort="27015"
 querryPort="7777"
 sessionName="ArkServer"
 
+# Backup Compression Format
+# Available Formats:
+# gz - Moderate compression time (medium file sizes) ~suggested~
+# bz2 - Slow compression time (small file sizes)
+compFormat="gz"
 
 #######################################
 
@@ -105,4 +110,4 @@ sessionName="ArkServer"
 gameDir="ShooterGame/Binaries/Linux"
 gameid="376030"
 
-configVersion="1.0.9"
+configVersion="1.1.0"
