--- a/configuration.ini
+++ b/configuration.ini
@@ -16,6 +16,10 @@ safetyNotif="True"
 # HostName to show in lists.
 hostName="ARK-SERVER"
 
+# Address
+# If you have multiple ip address on your machine, you can specify what IP you want to use here.
+ipAddress=""
+
 # If your listing on ARKSERVERS, add the name it provides below.
 # If else, dont edit this at all. Leave it as ""
 arkServers=""
