--- a/configuration.ini
+++ b/configuration.ini
@@ -95,7 +95,7 @@ XPMultiplier="1.000000"
 # If you have multiple servers, change this.
 arkExecute="ShooterGameServer_1"
 serverPort="27015"
-querryPort="7777"
+queryPort="7777"
 sessionName="ArkServer"
 
 # Backup Compression Format
