Removed server port, fixed query port, stalled multi ip

--- a/configuration.ini
+++ b/configuration.ini
@@ -18,6 +18,7 @@ hostName="ARK-SERVER"
 
 # Address
 # If you have multiple ip address on your machine, you can specify what IP you want to use here.
+# This is not enabled yet. Will be in 1.2.0
 ipAddress=""
 
 # If your listing on ARKSERVERS, add the name it provides below.
@@ -94,8 +95,7 @@ XPMultiplier="1.000000"
 
 # If you have multiple servers, change this.
 arkExecute="ShooterGameServer_1"
-serverPort="27015"
-queryPort="7777"
+queryPort="27015"
 sessionName="ArkServer"
 
 # Backup Compression Format
@@ -114,4 +114,4 @@ compFormat="gz"
 gameDir="ShooterGame/Binaries/Linux"
 gameid="376030"
 
-configVersion="1.1.6"
+configVersion="1.1.7"
