--- a/configuration.ini
+++ b/configuration.ini
@@ -50,6 +50,12 @@ crossHair="True"
 noHud="False"
 enablePvPGamma="False"
 
+# AFK Timer (Seconds)
+afkTimer="2400"
+
+# Auto Save (Minutes)
+autoSave="5"
+
 # Only numbers 0-1 (decimals accepted)
 difficulty="0"
 
@@ -59,6 +65,8 @@ map="TheIsland"
 
 # Server Multipliers
 # Dont change these if you dont know what your doing. This will break your server if its not setup correctly.
+# Learn about each modifier with the link below!
+# http://ark.gamepedia.com/Server_Configuration_Options_and_Console_Commands
 TamingSpeedMultiplier="1"
 HarvestAmountMultiplier="1"
 PlayerCharacterWaterDrainMultiplier="1"
@@ -71,20 +79,20 @@ DinoCharacterHealthRecoveryMultiplier="1"
 DinoCountMultiplier="1"
 HarvestHealthMultiplier="1"
 PvEStructureDecayDestructionPeriod="0"
-
-MaxStructuresInRange="1300.000000"
+# ~~~Fancy Gap is Fancy and Pointless ~~
+MaxStructuresInRange="1300"
 DayCycleSpeedScale="1"
 NightTimeSpeedScale="1"
 DayTimeSpeedScale="1"
 DinoDamageMultiplier="1"
 TamedDinoDamageMultiplier="1"
-PlayerDamageMultiplier="1.000000"
-StructureDamageMultiplier="1.000000"
-PlayerResistanceMultiplier="1.000000"
+PlayerDamageMultiplier="1"
+StructureDamageMultiplier="1"
+PlayerResistanceMultiplier="1"
 DinoResistanceMultiplier="1"
 TamedDinoResistanceMultiplier="1"
-StructureResistanceMultiplier="1.000000"
-XPMultiplier="1.000000"
+StructureResistanceMultiplier="1"
+XPMultiplier="1"
 
 
 #######################################
@@ -114,4 +122,4 @@ compFormat="gz"
 gameDir="ShooterGame/Binaries/Linux"
 gameid="376030"
 
-configVersion="1.1.7"
+configVersion="1.1.8"
