--- a/configuration.ini
+++ b/configuration.ini
@@ -34,8 +34,7 @@ adminPass=""
 # Number of players.
 playerCount="70"
 
-# ARK Settings :)
-
+# Server Settings :)
 # True/False Statments ONLY
 showPlayers="False"
 hardcore="False"
@@ -105,6 +104,10 @@ XPMultiplier="1"
 arkExecute="ShooterGameServer_1"
 queryPort="27015"
 sessionName="ArkServer"
+
+# Server Status Settings
+showServerSettings="True"
+showServerMutipliers="True"
 
 # Backup Compression Format
 # Available Formats:
