--- a/version.ini
+++ b/version.ini
@@ -2,6 +2,7 @@
 arkserver="1.1.8"
 backupserver="1.1.8"
 installserver="1.1.8"
+serverstatus="1.1.0"
 startserver="1.1.8"
 stopserver="1.1.8"
 updateserver="1.1.8"
