Configuration option gamePort

--- a/configuration.ini
+++ b/configuration.ini
@@ -102,6 +102,7 @@ XPMultiplier="1"
 
 # If you have multiple servers, change this.
 arkExecute="ShooterGameServer_1"
+gamePort="7777"
 queryPort="27015"
 sessionName="ArkServer"
 
