HostName from GameUserSettings.ini

--- a/configuration.ini
+++ b/configuration.ini
@@ -14,6 +14,9 @@ safetySwitch="False"
 safetyNotif="True"
 
 # HostName to show in lists.
+# If HostName is "" it will be loaded from ShooterGame/Saved/Config/LinuxServer/GameUserSettings.ini
+# [SessionSettings]
+# SessionName=ARK SERVER NAME
 hostName="ARK-SERVER"
 
 # Address
