--- a/configuration.ini
+++ b/configuration.ini
@@ -6,7 +6,7 @@
 ####################################
  
 # SAFTEY SWITCH
-# Once your are done editing this file. Set this to "True"
+# Once you are done editing this file. Set this to "True"
 safetySwitch="False"
 
 # Disable this to remove the safety switch notification.
@@ -24,8 +24,8 @@ hostName="ARK-SERVER"
 # This is not enabled yet. Will be in 1.2.0
 ipAddress=""
 
-# If your listing on ARKSERVERS, add the name it provides below.
-# If else, dont edit this at all. Leave it as ""
+# If you are listing on ARKSERVERS, add the name it provides below.
+# If else, don't edit this at all. Leave it as ""
 arkServers=""
 
 # Server Password
@@ -38,7 +38,7 @@ adminPass=""
 playerCount="70"
 
 # Server Settings :)
-# True/False Statments ONLY
+# True/False Statements ONLY
 showPlayers="False"
 hardcore="False"
 globalVoice="False"
@@ -62,11 +62,11 @@ autoSave="5"
 difficulty="0"
 
 # Map
-# Dont change this if you dont know what your doing.
+# Don't change this if you don't know what you are doing.
 map="TheIsland"
 
 # Server Multipliers
-# Dont change these if you dont know what your doing. This will break your server if its not setup correctly.
+# Don't change these if you don't know what you are doing. This will break your server if its not setup correctly.
 # Learn about each modifier with the link below!
 # http://ark.gamepedia.com/Server_Configuration_Options_and_Console_Commands
 TamingSpeedMultiplier="1"
