--- a/configuration.ini
+++ b/configuration.ini
@@ -5,11 +5,11 @@
 #                                  #
 ####################################
  
-# SAFTEY SWITCH
-# Once you are done editing this file. Set this to "True"
+# SAFETY SWITCH
+# Once you are done editing this file, set this to "True".
 safetySwitch="False"
 
-# Disable this to remove the safety switch notification.
+# Disable to remove the safety switch notification.
 # This will be overridden if there is an issue in the script.
 safetyNotif="True"
 
@@ -20,12 +20,12 @@ safetyNotif="True"
 hostName="ARK-SERVER"
 
 # Address
-# If you have multiple ip address on your machine, you can specify what IP you want to use here.
+# If you have multiple ip addresses on your machine, you can specify which IP you want to use here.
 # This is not enabled yet. Will be in 1.2.0
 ipAddress=""
 
 # If you are listing on ARKSERVERS, add the name it provides below.
-# If else, don't edit this at all. Leave it as ""
+# Otherwise don't edit this at all. Leave it as ""
 arkServers=""
 
 # Server Password
@@ -66,7 +66,7 @@ difficulty="0"
 map="TheIsland"
 
 # Server Multipliers
-# Don't change these if you don't know what you are doing. This will break your server if its not setup correctly.
+# Don't change these if you don't know what you are doing. This will break your server if its not set up correctly.
 # Learn about each modifier with the link below!
 # http://ark.gamepedia.com/Server_Configuration_Options_and_Console_Commands
 TamingSpeedMultiplier="1"
@@ -97,11 +97,11 @@ StructureResistanceMultiplier="1"
 XPMultiplier="1"
 
 
-#######################################
+############################################
 
-# No need to edit any below this line #
+# No need to edit anything below this line #
 
-#######################################
+############################################
 
 # If you have multiple servers, change this.
 arkExecute="ShooterGameServer_1"
