--- a/configuration.ini
+++ b/configuration.ini
@@ -127,6 +127,7 @@ compFormat="gz"
 
 # For when I make an installer.
 gameDir="ShooterGame/Binaries/Linux"
+gameExecute="ShooterGameServer"
 gameid="376030"
 
 configVersion="1.1.9"
