fixed variable name

--- a/configuration.ini
+++ b/configuration.ini
@@ -11,7 +11,7 @@ safetySwitch="False"
 
 # Disable to remove the safety switch notification.
 # This will be overridden if there is an issue in the script.
-safetyNotif="True"
+safetyNotify="True"
 
 # HostName to show in lists.
 # If HostName is "" it will be loaded from ShooterGame/Saved/Config/LinuxServer/GameUserSettings.ini
