--- a/configuration.ini
+++ b/configuration.ini
@@ -46,7 +46,7 @@ proxChat="False"
 noTributeDl="True"
 thirdPerson="False"
 notifyLeft="False"
-dontNotifyJoin="False"
+notifyJoin="False"
 pveServer="False"
 crossHair="True"
 noHud="False"
