--- a/version.ini
+++ b/version.ini
@@ -1,10 +1,11 @@
 # Versions
-arkserver="1.2.3"
+arkserver="1.2.4"
 backupserver="1.1.9"
 installserver="1.1.8"
-serverstatus="1.0.5"
+serverstatus="1.0.6"
 startserver="1.2.9"
 stopserver="1.1.8"
 updateserver="1.1.9"
 viewserver="1.1.8"
 liveConfig="1.2.0"
+parameters="1.0.0"
