Added update check option.

--- a/configuration.ini
+++ b/configuration.ini
@@ -109,6 +109,9 @@ gamePort="7777"
 queryPort="27015"
 sessionName="ArkServer"
 
+# Check for gameserver updates when starting the server.
+updateChecker="True"
+
 # Server Status Settings
 showServerSettings="True"
 showServerMutipliers="True"
