--- a/configuration.ini
+++ b/configuration.ini
@@ -110,7 +110,7 @@ queryPort="27015"
 sessionName="ArkServer"
 
 # Check for gameserver updates when starting the server.
-updateChecker="True"
+checkUpdates="True"
 
 # Server Status Settings
 showServerSettings="True"
