--- a/configuration.ini
+++ b/configuration.ini
@@ -34,6 +34,10 @@ serverPass=""
 # Admin Password
 adminPass=""
 
+# RCON
+# Set this to "True", to enable RCON. Admin Password is required.
+rconEnabled="false"
+
 # Number of players.
 playerCount="70"
 
@@ -107,6 +111,7 @@ XPMultiplier="1"
 arkExecute="ShooterGameServer_1"
 gamePort="7777"
 queryPort="27015"
+rconPort="32330"
 sessionName="ArkServer"
 
 # Server Status Settings
@@ -130,4 +135,4 @@ gameDir="ShooterGame/Binaries/Linux"
 gameExecute="ShooterGameServer"
 gameid="376030"
 
-configVersion="1.2.1"
+configVersion="1.2.2"
