massive config changes (part 1)

--- a/configuration.ini
+++ b/configuration.ini
@@ -17,88 +17,97 @@ safetyNotify="True"
 # If HostName is "" it will be loaded from ShooterGame/Saved/Config/LinuxServer/GameUserSettings.ini
 # [SessionSettings]
 # SessionName=ARK SERVER NAME
-hostName="ARK-SERVER"
+SessionName="ARK-SERVER"
 
 # Address
 # If you have multiple ip addresses on your machine, you can specify which IP you want to use here.
 # This is not enabled yet. Will be in 1.2.0
-ipAddress=""
+IpAddress=""
 
 # If you are listing on ARKSERVERS, add the name it provides below.
 # Otherwise don't edit this at all. Leave it as ""
 arkServers=""
 
 # Server Password
-serverPass=""
+ServerPassword=""
 
 # Admin Password
-adminPass=""
+ServerAdminPassword=""
 
 # RCON
 # Set this to "True", to enable RCON. Admin Password is required.
-rconEnabled="false"
+RconEnabled="false"
 
 # Number of players.
-playerCount="70"
+MaxPlayers="70"
 
-# Server Settings :)
-# True/False Statements ONLY
-showPlayers="False"
-hardcore="False"
-globalVoice="False"
-proxChat="False"
-noTributeDl="True"
-thirdPerson="False"
-notifyLeft="False"
-notifyJoin="False"
-pveServer="False"
-crossHair="True"
-noHud="False"
-enablePvPGamma="False"
+# Boolean Server Parameters (true / false)
+AlwaysNotifyPlayerJoined="false"
+AlwaysNotifyPlayerLeft="false"
+AllowThirdPersonPlayer="false"
+GlobalVoiceChat="false"
+ShowMapPlayerLocation="false"
+NoTributeDownloads="false"
+ProximityChat="false"
+ServerPVE="false"
+ServerHardcore="false"
+ServerForceNoHUD="false"
+ServerCrosshair="false"
+EnablePvPGamma="false"
+DisableStructureDecayPvE="false"
+AllowFlyerCarryPvE="false"
+ClampResourceHarvestDamage="false"
+PreventDownloadSurvivors="false"
+PreventDownloadItems="false"
+PreventDownloadDinos="false"
 
 # AFK Timer (Seconds)
-afkTimer="2400"
+KickIdlePlayersPeriod="2400"
 
 # Auto Save (Minutes)
-autoSave="5"
+AutoSavePeriodMinutes="5"
 
 # Only numbers 0-1 (decimals accepted)
-difficulty="0"
+DifficultyOffset="0.2"
 
 # Map
 # Don't change this if you don't know what you are doing.
 map="TheIsland"
 
+# Integer Server Parameters 
+MaxStructuresInRange="1300"
+PvEStructureDecayDestructionPeriod="0"
+
 # Server Multipliers
 # Don't change these if you don't know what you are doing. This will break your server if its not set up correctly.
 # Learn about each modifier with the link below!
 # http://ark.gamepedia.com/Server_Configuration_Options_and_Console_Commands
-TamingSpeedMultiplier="1"
-HarvestAmountMultiplier="1"
-PlayerCharacterWaterDrainMultiplier="1"
-PlayerCharacterFoodDrainMultiplier="1"
-DinoCharacterFoodDrainMultiplier="1"
-PlayerCharacterStaminaDrainMultiplier="1"
-DinoCharacterStaminaDrainMultiplier="1"
-PlayerCharacterHealthRecoveryMultiplier="1"
-DinoCharacterHealthRecoveryMultiplier="1"
-DinoCountMultiplier="1"
-HarvestHealthMultiplier="1"
-PvEStructureDecayDestructionPeriod="0"
-# ~~~Fancy Gap is Fancy and Pointless ~~
-MaxStructuresInRange="1300"
-DayCycleSpeedScale="1"
-NightTimeSpeedScale="1"
-DayTimeSpeedScale="1"
-DinoDamageMultiplier="1"
-TamedDinoDamageMultiplier="1"
-PlayerDamageMultiplier="1"
-StructureDamageMultiplier="1"
-PlayerResistanceMultiplier="1"
-DinoResistanceMultiplier="1"
-TamedDinoResistanceMultiplier="1"
-StructureResistanceMultiplier="1"
-XPMultiplier="1"
+PlayerDamageMultiplier="1.0"
+PlayerResistanceMultiplier="1.0"
+PlayerCharacterWaterDrainMultiplier="1.0"
+PlayerCharacterFoodDrainMultiplier="1.0"
+PlayerCharacterStaminaDrainMultiplier="1.0"
+PlayerCharacterHealthRecoveryMultiplier="1.0"
+DinoDamageMultiplier="1.0"
+DinoResistanceMultiplier="1.0"
+DinoCharacterFoodDrainMultiplier="1.0"
+DinoCharacterStaminaDrainMultiplier="1.0"
+DinoCharacterHealthRecoveryMultiplier="1.0"
+TamedDinoDamageMultiplier="1.0"
+TamedDinoResistanceMultiplier="1.0"
+StructureDamageMultiplier="1.0"
+StructureResistanceMultiplier="1.0"
+
+DayCycleSpeedScale="1.0"
+DayTimeSpeedScale="1.0"
+NightTimeSpeedScale="1.0"
+TamingSpeedMultiplier="1.0"
+DinoCountMultiplier="1.0"
+HarvestAmountMultiplier="1.0"
+HarvestHealthMultiplier="1.0"
+ResourcesRespawnPeriodMultiplier="1.0"
+PvEStructureDecayPeriodMultiplier="1.0"
+XPMultiplier="1.0"
 
 
 ############################################
@@ -109,9 +118,9 @@ XPMultiplier="1"
 
 # If you have multiple servers, change this.
 arkExecute="ShooterGameServer_1"
-gamePort="7777"
-queryPort="27015"
-rconPort="32330"
+GamePort="7777"
+QueryPort="27015"
+RconPort="32330"
 sessionName="ArkServer"
 
 # Check for gameserver updates when starting the server.
