massive config changes (part 2)

--- a/configuration.ini
+++ b/configuration.ini
@@ -1,45 +1,59 @@
 ####################################
-#                                  #
-#       Configuration File         #
-#    Script & Config By Zendrex    #
-#                                  #
+##                                ##
+##    ARK-Linux-Server-Script     ##
+##      Configuration File        ##
+##                                ##
+##      Script and Config by      ##
+##    Zendrex and ComputerBaer    ##
+##                                ##
 ####################################
- 
-# SAFETY SWITCH
-# Once you are done editing this file, set this to "True".
-safetySwitch="False"
 
-# Disable to remove the safety switch notification.
-# This will be overridden if there is an issue in the script.
-safetyNotify="True"
+#######################
+##  Server Settings  ##
+#######################
 
-# HostName to show in lists.
-# If HostName is "" it will be loaded from ShooterGame/Saved/Config/LinuxServer/GameUserSettings.ini
-# [SessionSettings]
-# SessionName=ARK SERVER NAME
+# Server name that is displayed in server lists. SessionName can not contain special characters including whitespaces.
+# If SessionName is "" it will be loaded from ShooterGame/Saved/Config/LinuxServer/GameUserSettings.ini, see next two lines for an example
+#   [SessionSettings]
+#   SessionName=ARK SERVER NAME WITH SPECIAL CHARCTERS
 SessionName="ARK-SERVER"
 
-# Address
-# If you have multiple ip addresses on your machine, you can specify which IP you want to use here.
-# This is not enabled yet. Will be in 1.2.0
+# If you are listing on ARKSERVERS, add the name it provides below, otherwise leave it as "". It will be added to your SessionName.
+ArkServers=""
+
+# If you have multiple IP addresses on your machine, you can specify which IP you want to use here.
 IpAddress=""
 
-# If you are listing on ARKSERVERS, add the name it provides below.
-# Otherwise don't edit this at all. Leave it as ""
-arkServers=""
-
-# Server Password
+# Password for accessing the server as player
 ServerPassword=""
 
-# Admin Password
+# Password for enabling administrator commands and use rcon
 ServerAdminPassword=""
 
-# RCON
-# Set this to "True", to enable RCON. Admin Password is required.
+# Set this to "true", to enable RCON. ServerAdminPassword is required, otherwise it will be automatically disabled.
 RconEnabled="false"
 
-# Number of players.
+# Maximum number of players
 MaxPlayers="70"
+
+# Kick idle players after x seconds
+KickIdlePlayersPeriod="2400"
+
+# Automatically saves world and players all x minutes
+AutoSavePeriodMinutes="5"
+
+# Game Difficulty, the current decimal number range is 0-4 (ARK 187.0)
+DifficultyOffset="0.2"
+
+# Name of the Game World. Don't change this if you don't know what you are doing.
+MapName="TheIsland"
+
+#######################
+## Server Parameters ##
+#######################
+
+# Don't change these if you don't know what you are doing.
+# http://ark.gamepedia.com/Server_Configuration#Options
 
 # Boolean Server Parameters (true / false)
 AlwaysNotifyPlayerJoined="false"
@@ -61,27 +75,11 @@ PreventDownloadSurvivors="false"
 PreventDownloadItems="false"
 PreventDownloadDinos="false"
 
-# AFK Timer (Seconds)
-KickIdlePlayersPeriod="2400"
-
-# Auto Save (Minutes)
-AutoSavePeriodMinutes="5"
-
-# Only numbers 0-1 (decimals accepted)
-DifficultyOffset="0.2"
-
-# Map
-# Don't change this if you don't know what you are doing.
-map="TheIsland"
-
 # Integer Server Parameters 
 MaxStructuresInRange="1300"
 PvEStructureDecayDestructionPeriod="0"
 
-# Server Multipliers
-# Don't change these if you don't know what you are doing. This will break your server if its not set up correctly.
-# Learn about each modifier with the link below!
-# http://ark.gamepedia.com/Server_Configuration_Options_and_Console_Commands
+# Decimal Server Parameters 
 PlayerDamageMultiplier="1.0"
 PlayerResistanceMultiplier="1.0"
 PlayerCharacterWaterDrainMultiplier="1.0"
@@ -108,6 +106,22 @@ HarvestHealthMultiplier="1.0"
 ResourcesRespawnPeriodMultiplier="1.0"
 PvEStructureDecayPeriodMultiplier="1.0"
 XPMultiplier="1.0"
+
+#######################
+##  Script Settings  ##
+#######################
+
+# SAFETY SWITCH
+# Once you are done editing this file, set this to "True".
+safetySwitch="False"
+
+# Disable to remove the safety switch notification.
+# This will be overridden if there is an issue in the script.
+safetyNotify="True"
+
+
+
+
 
 
 ############################################
