massive config changes (part 3)
script is currently not functional

--- a/configuration.ini
+++ b/configuration.ini
@@ -1,7 +1,7 @@
 ####################################
 ##                                ##
 ##    ARK-Linux-Server-Script     ##
-##      Configuration File        ##
+##       Configuration File       ##
 ##                                ##
 ##      Script and Config by      ##
 ##    Zendrex and ComputerBaer    ##
@@ -112,53 +112,41 @@ XPMultiplier="1.0"
 #######################
 
 # SAFETY SWITCH
-# Once you are done editing this file, set this to "True".
-safetySwitch="False"
+# Once you are done editing this file, set this to "true".
+SafetySwitch="false"
 
-# Disable to remove the safety switch notification.
-# This will be overridden if there is an issue in the script.
-safetyNotify="True"
+# Disable to remove all notifications and delays while starting the script.
+InfoNotify="true"
 
-
-
-
-
-
-############################################
-
-# No need to edit anything below this line #
-
-############################################
-
-# If you have multiple servers, change this.
-arkExecute="ShooterGameServer_1"
-GamePort="7777"
-QueryPort="27015"
-RconPort="32330"
-sessionName="ArkServer"
-
-# Check for gameserver updates when starting the server.
-checkUpdates="True"
-
-# Server Status Settings
-showServerSettings="True"
-showServerMutipliers="True"
+# Show information in status script
+StatusShowSettings="true"
+StatusShowParameters="true"
 
 # Backup Compression Format
 # Available Formats:
-# gz - Moderate compression time (medium file sizes) ~suggested~
-# bz2 - Slow compression time (small file sizes)
-compFormat="gz"
+#   gz - Moderate compression time (medium file sizes) ~suggested~
+#   bz2 - Slow compression time (small file sizes)
+CompressionFormat="gz"
 
-#######################################
+# Check for ARK-Server updates when starting the server.
+CheckUpdates="true"
 
-#     DO NOT EDIT BELOW THIS LINE     #
+# Automatically install updates after update check
+AutomaticallyInstallUpdates="false"
 
-#######################################
+#######################
+##  Multiple Servers ##
+#######################
 
-# For when I make an installer.
-gameDir="ShooterGame/Binaries/Linux"
-gameExecute="ShooterGameServer"
-gameid="376030"
+# If you have multiple servers, change this, otherwise there is no need to edit anything.
 
+GamePort="7777"
+QueryPort="27015"
+RconPort="32330"
+
+ArkExecute="ShooterGameServer_1"
+ScreenName="ArkServer"
+
+#######################
+# DO NOT EDIT THIS !!!
 configVersion="1.2.3"
