--- a/configuration.ini
+++ b/configuration.ini
@@ -120,7 +120,8 @@ InfoNotify="true"
 
 # Show information in status script
 StatusShowSettings="true"
-StatusShowParameters="true"
+StatusShowParametersBoolean="true"
+StatusShowParametersNumber="true"
 
 # Backup Compression Format
 # Available Formats:
@@ -149,4 +150,4 @@ ScreenName="ArkServer"
 
 #######################
 # DO NOT EDIT THIS !!!
-configVersion="1.2.3"
+ConfigVersion="1.2.3"
