--- a/configuration.ini
+++ b/configuration.ini
@@ -115,6 +115,10 @@ XPMultiplier="1.0"
 # Once you are done editing this file, set this to "true".
 SafetySwitch="false"
 
+# Script Tool Updater
+# People requested this, so we added it. We suggest you leave this on however.
+ScriptUpdater="true"
+
 # Disable to remove all notifications and delays while starting the script.
 InfoNotify="true"
 
@@ -150,4 +154,4 @@ ScreenName="ArkServer"
 
 #######################
 # DO NOT EDIT THIS !!!
-ConfigVersion="1.3.0"
+ConfigVersion="1.3.1"
