fixed ArkServers config option

--- a/configuration.ini
+++ b/configuration.ini
@@ -18,7 +18,8 @@
 #   SessionName=ARK SERVER NAME WITH SPECIAL CHARCTERS
 SessionName="ARK-SERVER"
 
-# If you are listing on ARKSERVERS, add the name it provides below, otherwise leave it as "". It will be added to your SessionName.
+# If you are listing on ARKSERVERS, add the name it provides below, otherwise leave it as "".
+# It will be added to your SessionName, only works if SessionName is not "".
 ArkServers=""
 
 # If you have multiple IP addresses on your machine, you can specify which IP you want to use here.
