--- a/configuration.ini
+++ b/configuration.ini
@@ -156,4 +156,6 @@ ScreenName="ArkServer"
 #######################
 # DO NOT EDIT THIS !!!
 ConfigVersion="1.3.1"
-DevBranch="master"
+
+UseDevBranch="false"
+Branch="master"
