--- a/configuration.ini
+++ b/configuration.ini
@@ -157,5 +157,5 @@ ScreenName="ArkServer"
 # DO NOT EDIT THIS !!!
 ConfigVersion="1.3.1"
 
-UseDevBranch="false"
-Branch="master"
+# Only edit this if your a dev or have the balls to use our broken dev builds.
+GitBranch="master"
