--- a/configuration.ini
+++ b/configuration.ini
@@ -77,7 +77,8 @@ PreventDownloadItems="false"
 PreventDownloadDinos="false"
 
 # Integer Server Parameters 
-MaxStructuresInRange="1300"
+# MaxStructuresInRange="1300" # I think this is removed (ARK 188.0)
+NewMaxStructuresInRange="6000"
 PvEStructureDecayDestructionPeriod="0"
 
 # Decimal Server Parameters 
@@ -155,7 +156,7 @@ ScreenName="ArkServer"
 
 #######################
 # DO NOT EDIT THIS !!!
-ConfigVersion="1.3.2"
+ConfigVersion="1.3.3"
 
 # Only edit this if your a dev or have the balls to use our broken dev builds.
 GitBranch="master"
