--- a/configuration.ini
+++ b/configuration.ini
@@ -37,6 +37,9 @@ RconEnabled="false"
 # Maximum number of players
 MaxPlayers="70"
 
+# Enabled UserCache
+UserCache="true"
+
 # Kick idle players after x seconds
 KickIdlePlayersPeriod="2400"
 
@@ -156,7 +159,7 @@ ScreenName="ArkServer"
 
 #######################
 # DO NOT EDIT THIS !!!
-ConfigVersion="1.3.3"
+ConfigVersion="1.3.4"
 
 # Only edit this if your a dev or have the balls to use our broken dev builds.
 GitBranch="master"
