--- a/version.ini
+++ b/version.ini
@@ -1,12 +1,14 @@
 # Versions
 arkserver="1.2.24"
-backupserver="1.2.4"
+backupserver="1.2.6"
 installserver="1.2.2"
-serverstatus="1.0.11"
+serverstatus="1.0.12"
 startserver="1.3.9"
 stopserver="1.2.2"
 updateserver="1.2.4"
 viewserver="1.2.2"
-liveConfig="1.3.4"
-parameters="1.1.7"
+liveConfig="1.3.5"
+parameters="1.2.3"
 functions="1.1.3"
+pushfile="1.1.5"
+changelog="1.0.2"
