--- a/configuration.ini
+++ b/configuration.ini
@@ -12,10 +12,7 @@
 ##  Server Settings  ##
 #######################
 
-# Server name that is displayed in server lists. SessionName can not contain special characters including whitespaces.
-# If SessionName is "" it will be loaded from ShooterGame/Saved/Config/LinuxServer/GameUserSettings.ini, see next two lines for an example
-#   [SessionSettings]
-#   SessionName=ARK SERVER NAME WITH SPECIAL CHARCTERS
+# Server name that is displayed in server lists.
 SessionName="ARK-SERVER"
 
 # If you are listing on ARKSERVERS, add the name it provides below, otherwise leave it as "".
