--- a/configuration.ini
+++ b/configuration.ini
@@ -34,8 +34,8 @@ RconEnabled="false"
 # Maximum number of players
 MaxPlayers="70"
 
-# Enabled UserCache
-UserCache="true"
+# Enabled "Experiment Fast Load Cache"
+UseCache="true"
 
 # Kick idle players after x seconds
 KickIdlePlayersPeriod="2400"
@@ -156,7 +156,7 @@ ScreenName="ArkServer"
 
 #######################
 # DO NOT EDIT THIS !!!
-ConfigVersion="1.3.5"
+ConfigVersion="1.3.6"
 
 # Only edit this if your a dev or have the balls to use our broken dev builds.
 GitBranch="master"
