--- a/configuration.ini
+++ b/configuration.ini
@@ -31,6 +31,9 @@ ServerAdminPassword=""
 # Set this to "true", to enable RCON. ServerAdminPassword is required, otherwise it will be automatically disabled.
 RconEnabled="false"
 
+# Spectator Settings
+SpectatorPassword=""
+
 # Maximum number of players
 MaxPlayers="70"
 
@@ -79,6 +82,7 @@ PreventDownloadDinos="false"
 # Integer Server Parameters 
 # MaxStructuresInRange="1300" # I think this is removed (ARK 188.0)
 NewMaxStructuresInRange="6000"
+MaxTamedDinos="4000"
 PvEStructureDecayDestructionPeriod="0"
 
 # Decimal Server Parameters 
@@ -105,6 +109,9 @@ TamingSpeedMultiplier="1.0"
 DinoCountMultiplier="1.0"
 HarvestAmountMultiplier="1.0"
 HarvestHealthMultiplier="1.0"
+GlobalSpoilingTimeMultiplier="1.0"
+GlobalItemDecompositionTimeMultiplier="1.0"
+GlobalCorpseDecompositionTimeMultiplier="1.0"
 ResourcesRespawnPeriodMultiplier="1.0"
 PvEStructureDecayPeriodMultiplier="1.0"
 XPMultiplier="1.0"
@@ -156,7 +163,7 @@ ScreenName="ArkServer"
 
 #######################
 # DO NOT EDIT THIS !!!
-ConfigVersion="1.3.6"
+ConfigVersion="1.3.7"
 
 # Only edit this if your a dev or have the balls to use our broken dev builds.
 GitBranch="master"
